feat(ui): редактирование документа прямо на листе
